# Volt_X

./: .bashrc  .gitignore  AUDIT-PHASE-1.md  AUDIT-PHASE-5.md  CHAT_INTERFACE_ROADMAP.md  CLAUDE.md  CLOUD_TRAINING_PLAN.md  CODE_TRAINING_PLAN.md  Cargo.toml  DATA_SETUP_SUMMARY.md  DECISIONS.md  README.md  TRAINING.md  TRAINING_COMMANDS.md  TRAINING_REV1.md  VASTAI_SETUP_GUIDE.md  VOLT X guide.md  VOLT X — Temp.md  Visualization.html  testfile  training_config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
Audits/: PHASE2-AUDIT.md
archive/training/: Appendix.md  CODE_TRAINING_PLAN.md  PATH_TO_AGI.md  TRAINING_PLAN.md
crates/volt-bus/: Cargo.toml
crates/volt-bus/src/: lib.rs
crates/volt-bus/tests/: algebra_test.rs
crates/volt-core/: Cargo.toml
crates/volt-core/benches/: frame_bench.rs
crates/volt-core/src/: error.rs  frame.rs  lib.rs  meta.rs  slot.rs
crates/volt-core/tests/: serialization_test.rs
crates/volt-db/: Cargo.toml
crates/volt-db/src/: hnsw_index.rs  lib.rs  store.rs  temporal.rs  tier1.rs
crates/volt-hard/: Cargo.toml
crates/volt-hard/src/: lib.rs  math_engine.rs  proof_constructor.rs  router.rs  strand.rs
crates/volt-hard/tests/: integration.rs
crates/volt-learn/: Cargo.toml
crates/volt-learn/src/: code_dataset.rs  code_frame_pairs.rs  codebook_init.rs  kmeans.rs  lib.rs  nn_rng.rs  rlvf.rs  sleep.rs  stats.rs
crates/volt-learn/tests/: milestone_5_2_test.rs  milestone_5_3_test.rs  phase2_test.rs  phase_0_3_test.rs
crates/volt-safety/src/: lib.rs
crates/volt-server/: Cargo.toml
crates/volt-server/src/: lib.rs  main.rs  models.rs  routes.rs  state.rs
crates/volt-server/tests/: server_test.rs
crates/volt-soft/: Cargo.toml
crates/volt-soft/src/: attention.rs  learned_diffusion.rs  lib.rs  nn.rs  rar.rs  scaled_vfn.rs  vfn.rs
crates/volt-soft/tests/: phase2_test.rs  rar_test.rs  training_test.rs
crates/volt-translate/: Cargo.toml
crates/volt-translate/src/: decode.rs  lib.rs  stub.rs
n8n/: volt-x-chat.workflow.json
roadmap/: MILESTONE-0.md  PHASE-1(DONE).md  PHASE-1.md  PHASE-2(DONE).md  PHASE-2.md  PHASE-3.md  PHASE-4.md  PHASE-5.md  PHASE-6.md
scripts/: dev.ps1
tests/integration/: frame_roundtrip.rs  smoke.rs
tools/: train_translator.py
(+5 files in other folders)
