[package]
name = "volt-learn"
version.workspace = true
edition.workspace = true

[dependencies]
volt-core = { workspace = true, features = ["serde"] }
volt-bus.workspace = true
volt-db.workspace = true
volt-soft.workspace = true
volt-translate.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest.workspace = true
